ms-reviews/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ms-reviews
  namespace: client-ms-reviews
spec:
  rules:
    - host: reviews-development.luuna.mx
      http:
        paths:
          - backend:
              service:
                name: ms-reviews
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
